Replace the java.xml.bind (jaxb) package usages with JDK built-in or custom util implementation. It helps to use this library with with JDK 7 and Android project.